<resources>
    <string name="app_name">Dicoding Intermediate - StoryApp</string>
    <string name="story_s_photo">Story\'s Photo</string>
    <string name="no_data">No Data</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="register_here">Register Here</string>
    <string name="new_story">New Story</string>
    <string name="photo_taken">Photo taken</string>
    <string name="button_open_gallery">Button open gallery</string>
    <string name="button_open_camera">Button open camera</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="image_detail_photo">Image Detail Photo</string>
    <string name="logout">Logout</string>
</resources>